--- a/package.json
+++ b/package.json
@@ -3,16 +3,21 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@react-firebase/database": "^0.3.11",
     "@testing-library/jest-dom": "^5.11.9",
     "@testing-library/react": "^11.2.3",
     "@testing-library/user-event": "^12.6.0",
     "bootstrap": "^4.5.3",
+    "firebase": "^8.2.2",
     "gh-pages": "^3.1.0",
     "react": "^17.0.1",
     "react-bootstrap": "^1.4.3",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.1",
     "react-scroll": "^1.8.1",
+    "react-slideshow-image": "^3.4.3",
+    "reactfire": "^3.0.0-rc.0",
+    "reactjs-popup": "^2.0.4",
     "web-vitals": "^0.2.4",
     "yarn": "^1.22.10"
   },
